# ros2_force_aware_grasp_planner

./: .clang-format  .gitignore  .gitmodules  README.md  ompl_planning.yaml
grasp_interfaces/: CMakeLists.txt  package.xml
grasp_interfaces/msg/: Grasp.msg  GraspArray.msg
gripper_control/: CMakeLists.txt  package.xml
gripper_control/src/: wrapper.cpp
obstacle/: CMakeLists.txt  package.xml
obstacle/src/: force.cpp  obstacle.cpp
planner/: CMakeLists.txt  package.xml  requirements.txt
planner/assets/checkpoints/: Mix250_all_w.pth  Model0.pth
planner/assets/meshes/: Bushing3_cg1.msh  Bushing4_cg1.msh  Cuboid1_cg1.msh  L-Bracket4_cg1.msh  L-Bracket5_cg1.msh  T-Bracket3_cg1.msh  T-Bracket4_cg1.msh
planner/src/: GraspOptimizer.py  config.py  dummy.py  grasp.py  optimizer.py  planner.py  sampler.py
planner/src/meshgraphnet/: README.md  data.py  graph_builder.py  graphs.ipynb  meshgen.py  nets.py  normalizer.py  play.py  simulation.ipynb  simulator.py  train.py  utils.py
robot_control/: CMakeLists.txt  package.xml
robot_control/launch/: start.launch.py
robot_control/urdf/: robot.control.urdf.xacro
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: joint_limits.yaml
robot_description/launch/: display.launch.py
robot_description/urdf/: robot.urdf  robot.urdf.xacro  robot_macro.xacro
robot_moveit/: CMakeLists.txt  package.xml
robot_moveit/launch/: start.launch.py
robot_moveit/src/: ik.cpp  task.cpp  task_executor.cpp  task_executor.hpp  task_executor_utils.cpp  task_executor_utils.hpp  waypoints.cpp
robot_moveit_config/: .setup_assistant  package.xml
robot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot.srdf  ros2_controllers.yaml
robot_moveit_config/launch/: move_group.launch.py  robot_moveit.launch.py
rviz_mesh_publisher/: package.xml  setup.cfg  setup.py
rviz_mesh_publisher/config/: rviz_mesh_publisher.rviz
rviz_mesh_publisher/meshes/: Bushing3.stl  Bushing4.stl  L-Bracket4.stl  L-Bracket5.stl  T-Bracket3.stl  T-Bracket4.stl
rviz_mesh_publisher/rviz_mesh_publisher/: publisher.py
